syntax = "proto3";

package note;
option go_package = "/note";

service NoteManager {
  rpc CreateNote(CreateNoteRequest) returns (CreateNoteResponse) {}
  rpc GetAllNotes(GetAllNotesRequest) returns (GetAllNotesResponse) {}
  rpc GetNoteByID(GetNoteByIDRequest) returns (GetNoteByIDResponse) {}
  rpc DeleteNoteByID(DeleteNoteByIDRequest) returns (DeleteNoteByIDResponse) {}
}

message Note {
  string data = 1;
}

message CreateNoteRequest {
  int64 user_id = 1 [json_name="user_id"];
  Note note = 2;
}

message CreateNoteResponse {
  int64 note_id = 1;
}

message GetAllNotesRequest {
  int64 user_id = 1;
}

message GetAllNotesResponse {
  repeated Note notes = 1;
}

message GetNoteByIDRequest {
  int64 note_id = 1;
}

message GetNoteByIDResponse {
  int64 user_id = 1;
  Note note = 2;
}

message DeleteNoteByIDRequest {
  int64 note_id = 1;
}

message DeleteNoteByIDResponse {
  int64 user_id = 1;
}
